tools/architecture/validate-source-imports/tests/fixtures/invalid/access-imports-react/src/index.ts
import React from "react";
export const packageName = "@platform/access-control";
